# elemental-inference-sport-highlight

./: .env.example  .env.production  .env.staging  .gitignore  README.md  amplify.yml  bucket-policy.json  cloudfront-config.json  index.html  package-lock.json  package.json  vitest.config.ts
.kiro/hooks/: code-quality-analyzer.kiro.hook  smart-commit-helper.kiro.hook  update-docs-on-change.kiro.hook
.kiro/specs/highlight-clip-generation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
Desktop/auto_live_subtitling-IBC2025/: .gitignore  Auto_live_subtitling.drawio  Config  README.md  cdk.json  config.json  config.json.example  hls_transcript_monitor.py  package.json
Desktop/auto_live_subtitling-IBC2025/lib/: base-live-streaming-stack.js  cognito-stack.js  deploy-stack.js  medialive.js  subtitle-origin-stack.js  udp-audio-receiver-stack.js  video-player-stack.js  webvtt-interceptor-stack.js
Desktop/video-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
Desktop/video-mcp-server/src/video_mcp/: __init__.py  server.py
lambda/: index.mjs  policy.json
lambda/clip-generator/: index.mjs  package-lock.json  package.json
lambda/edge-vod-converter/: README.md  index.js  package.json
server/: index.js  package-lock.json  package.json
src/app/: App.tsx  routes.ts
src/app/components/: add-channel-modal.tsx  batch-clip-generator.test.ts  batch-clip-generator.tsx  channel-card.tsx  channel-detail-modal.tsx  clip-card.test.ts  clip-card.tsx  clip-generator-button.tsx  clip-status-badge.tsx  dashboard.tsx  (+6 more)
(+30 files in other folders)
