[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-mcp-server"
version = "0.1.0"
description = "MCP server for video processing with AWS Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "boto3>=1.34.0",
    "strands-agents>=0.1.0"
]

[project.scripts]
video-mcp-server = "video_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_mcp"]
